--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Password Manager</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/ui.css">
+<script src="./js/ui.js" charset="utf-8"></script>
+</head>
+
+<body>
+  <h1 class="heading">Password Manager</h1>
+<form class="" action="ui.html" method="post">
+  <div class="input-group flex-nowrap mod-inp">
+    <span class="input-group-text" >Username</span>
+    <input type="text" class="form-control" id="user" aria-label="Username" aria-describedby="addon-wrapping">
+  </div>
+
+  <div class="input-group flex-nowrap mod-inp-password">
+    <span class="input-group-text" >Password</span>
+    <input type="password" class="form-control" id="pass" aria-label="password" aria-describedby="addon-wrapping">
+  </div>
+
+  <button type="button" class="btn btn-primary mod-btn">Sign In</button>
+</form>
+
+</body>
+<script>
+  require("./js/ui.js");
+</script>
+
 </html>
