Add file handling code

--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1 class="heading">Password Manager</h1>
-<form class="" action="ui.html" method="post">
+
   <div class="input-group flex-nowrap mod-inp">
     <span class="input-group-text" >Username</span>
     <input type="text" class="form-control" id="user" aria-label="Username" aria-describedby="addon-wrapping">
@@ -22,8 +22,8 @@
     <input type="password" class="form-control" id="pass" aria-label="password" aria-describedby="addon-wrapping">
   </div>
 
-  <button type="button" class="btn btn-primary mod-btn">Sign In</button>
-</form>
+  <button type="button" class="btn btn-primary mod-btn" ><a href="./details.html">Sign In</a></button>
+
 
 </body>
 <script>
