--- a/root/UI/details.html
+++ b/root/UI/details.html
@@ -5,14 +5,16 @@
     <script src="./js/details.js" charset="utf-8"></script>
   </head>
   <body>
-    <form class="" action="index.html" method="post">
+    <!-- <form class="" action="index.htm" method="post"> -->
+    <form>
       <label for="">url</label>
       <input id=url type="text" name="url" value="">
       <label for="">username</label>
       <input id=username type="" name="" value="">
       <label for="">password</label>
       <input id=password type="password" name="" value="">
-      <button type="submit" name="button">submit</button>
+      <button type="submit" name="button" onclick="insertRecord()">submit</button>
+
     </form>
   </body>
 </html>
