Make UI Changes

--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -22,9 +22,7 @@
     <input type="password" class="form-control" id="pass" aria-label="password" aria-describedby="addon-wrapping">
   </div>
 
-  <button type="button" class="btn btn-primary mod-btn" ><a href="./details.html">Sign In</a></button>
-
-
+  <button type="button" class="btn btn-primary mod-btn" onclick="location.href='home.html';">Sign In</button>
 </body>
 <script>
   require("./js/ui.js");
