Debug modify function

--- a/root/UI/delete.html
+++ b/root/UI/delete.html
@@ -41,7 +41,7 @@
     <form>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">URL</span>
-        <input type="text" class="form-control" id="durl" aria-label="url" aria-describedby="addon-wrapping">
+        <input type="text" class="form-control" id="url" aria-label="url" aria-describedby="addon-wrapping">
       </div>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">Username</span>
