--- a/root/UI/modify.html
+++ b/root/UI/modify.html
@@ -40,18 +40,18 @@
     <form>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">URL</span>
-        <input type="text" class="form-control" id="durl iurl" aria-label="url" aria-describedby="addon-wrapping">
+        <input type="text" class="form-control" id="url" aria-label="url" aria-describedby="addon-wrapping">
       </div>
       <div class="input-group add-fields mb-3">
-        <input type="text" class="form-control" id="dusername" placeholder="Username" aria-label="Username">
+        <input type="text" class="form-control" id="ousername" placeholder="Username" aria-label="Username">
         <span class="input-group-text">
           <->
         </span>
-        <input type="text" class="form-control" id="iusername" placeholder="New Username" aria-label="Server">
+        <input type="text" class="form-control" id="nusername" placeholder="New Username" aria-label="Server">
       </div>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">Password</span>
-        <input type="text" class="form-control" id="ipassword" aria-label="url" aria-describedby="addon-wrapping">
+        <input type="text" class="form-control" id="password" aria-label="url" aria-describedby="addon-wrapping">
       </div>
       <button class="btn btn-primary" type="button" onclick="modifyRecord()" name="button">Modify</button>
 
