--- a/root/UI/insert.html
+++ b/root/UI/insert.html
@@ -40,7 +40,7 @@
     <form>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">URL</span>
-        <input type="text" class="form-control" id="iurl" aria-label="url" aria-describedby="addon-wrapping">
+        <input type="text" class="form-control" id="url" aria-label="url" aria-describedby="addon-wrapping">
       </div>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">Username</span>
