--- a/root/UI/home.html
+++ b/root/UI/home.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/home.css">
+  <script src="./js/details.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -33,10 +36,13 @@
       </div>
     </div>
   </nav>
-  <div class="">
 
+  <div class="input-group search-div mb-3">
+    <input type="text" class="form-control" id="search-query" placeholder="URL" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <div class="input-group-append">
+      <button class="btn btn-primary mod-btn"  onclick="searchRecord()"><i class="fa fa-search"></i></button>
+    </div>
   </div>
-
 </body>
 
 <script>
