--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -23,6 +23,7 @@
   </div>
 
   <button type="button" class="btn btn-primary mod-btn" onclick="location.href='home.html';">Sign In</button>
+  <button type="button" class="btn" name="button" onclick="location.href='signup.html';">Sign Up</button>
 </body>
 <script>
   require("./js/ui.js");
