--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -22,8 +22,8 @@
     <input type="password" class="form-control" id="pass" aria-label="password" aria-describedby="addon-wrapping">
   </div>
 
-  <button type="button" class="btn btn-primary mod-btn" onclick="location.href='home.html';">Sign In</button>
-  <button type="button" class="btn" name="button" onclick="location.href='signup.html';">Sign Up</button>
+  <button type="button" class="btn btn-primary mod-btn" onclick="checkCred()">Sign In</button>
+  <button type="button" class="btn" name="button">Sign Up</button>
 </body>
 <script>
   require("./js/ui.js");
