--- a/root/UI/ui.html
+++ b/root/UI/ui.html
@@ -23,7 +23,7 @@
   </div>
 
   <button type="button" class="btn btn-primary mod-btn" onclick="checkCred()">Sign In</button>
-  <button type="button" class="btn" name="button">Sign Up</button>
+  <button type="button" class="btn" name="button" onclick="window.location.href = './signup.html'">Sign Up</button>
 </body>
 <script>
   require("./js/ui.js");
