--- a/root/UI/home.html
+++ b/root/UI/home.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/home.css">
   <script src="./js/details.js" charset="utf-8"></script>
+  <script src="./js/home.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -40,9 +41,40 @@
   <div class="input-group search-div mb-3">
     <input type="text" class="form-control" id="search-query" placeholder="URL" aria-label="Recipient's username" aria-describedby="basic-addon2">
     <div class="input-group-append">
-      <button class="btn btn-primary mod-btn"  onclick="searchRecord()"><i class="fa fa-search"></i></button>
+      <button class="btn btn-primary mod-btn" onclick="searchRecord()"><i class="fa fa-search"></i></button>
     </div>
   </div>
+
+
+<div id='search'>
+
+</div>
+
+  <!-- <div id="search-temp" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 search-results"> -->
+    <!-- <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p class="card-text"></p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p class="card-text"></p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p class="card-text"></p>
+        </div>
+      </div>
+    </div> -->
+  <!-- </div> -->
+  <!-- <div id="search-1" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 search-results"> -->
+
 </body>
 
 <script>
