Update display text

--- a/root/UI/signup.html
+++ b/root/UI/signup.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="input-group flex-nowrap mod-inp-password">
-      <span class="input-group-text" >Password</span>
+      <span class="input-group-text" >Confirm Password</span>
       <input type="password" class="form-control" id="cfrm-pass-sgn" aria-label="password" aria-describedby="addon-wrapping">
     </div>
 
