Update input type to password

--- a/root/UI/modify.html
+++ b/root/UI/modify.html
@@ -51,7 +51,7 @@
       </div>
       <div class="input-group add-fields flex-nowrap mod-inp-password">
         <span class="input-group-text">Password</span>
-        <input type="text" class="form-control" id="password" aria-label="url" aria-describedby="addon-wrapping">
+        <input type="password" class="form-control" id="password" aria-label="url" aria-describedby="addon-wrapping">
       </div>
       <button class="btn btn-primary" type="button" onclick="modifyRecord()" name="button">Modify</button>
 
