--- a/root/UI/home.html
+++ b/root/UI/home.html
@@ -46,12 +46,40 @@
   </div>
 
 
-<div id='search'>
-
-</div>
+  <div id='search'>
+    <div id="search-temp" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 search-results">
+      <a style="text-decoration:none;" href="./insert.html">
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <p class="card-text"> ADD </p>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a style="text-decoration:none;" href="./delete.html">
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <p class="card-text"> DELETE </p>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a style="text-decoration:none;" href="./modify.html">
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <p class="card-text"> MODIFY </p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 
   <!-- <div id="search-temp" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 search-results"> -->
-    <!-- <div class="col">
+  <!-- <div class="col">
       <div class="card shadow-sm">
         <div class="card-body">
           <p class="card-text"></p>
